[package]
name = "usb_blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winapi = { version = "0.3", features = ["winuser", "setupapi", "cfgmgr32"] }
iced = { version = "0.12.1", features = ["tokio", "image"] }
iced_wgpu = "0.12.1"
iced_winit = "0.12.1"
tokio = { version = "1", features = ["full"] }